# LuisaForce

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  mpm88_app.cpp
apps/ast_syntax/: main.cpp
apps/ast_type/: main.cpp
apps/atomic/: main.cpp
apps/atomic_queue/: main.cpp
apps/binding_group/: main.cpp
apps/binding_group_template/: main.cpp
apps/bindless/: main.cpp
apps/bindless_buffer/: main.cpp
apps/callable/: man.cpp
apps/copy/: main.cpp
apps/cuda_lcub/: main.cpp
apps/dsl_multithread/: main.cpp
apps/dsl_sugar/: main.cpp
apps/dsl_syntax/: main.cpp
apps/game_of_life/: main.cpp
apps/hash_grid/: main.cpp
apps/helloworld/: main.cpp
apps/indirect_command/: main.cpp
apps/mipmap/: main.cpp
apps/mpm3d/: main.cpp
apps/mpm88/: main.cpp
apps/native_include/: main.cpp
apps/normal_encoding/: main.cpp
apps/raytracing_weekend/: camera.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h
apps/runtime_stream/: main.cpp
apps/sampler/: main.cpp
apps/sdf_renderer/: main.cpp
apps/shader_toy/: main.cpp
apps/shader_visual_present/: main.cpp
apps/shared_memory/: main.cpp
apps/soa/: main.cpp
apps/soa_simple/: main.cpp
apps/sph_fluid/: main.cpp
apps/stable_fluid/: main.cpp
apps/swapchain/: main.cpp
apps/swapchain_static/: main.cpp
apps/texture3d/: main.cpp
apps/texture_io/: main.cpp
apps/thread_pool/: main.cpp
benchmark/: CMakeLists.txt  atomic_reduce.cpp  atomic_reduce.h  benchmark_api.h  mad_throughput.cpp  mad_throughput.h  main.cpp  matmul_tiled.cpp  matmul_tiled.cu  matmul_tiled.h  mmt.cpp  mmt.h  one_workgroup_reduce.cpp  simd_group_arithmetic.cpp  tree_reduce.cpp
benchmark/utils/: data_type_util.cpp  data_type_util.h  status_util.cpp  status_util.h
core/: CMakeLists.txt  basic_traits.h  basic_types.cpp  basic_types.h  binary_buffer.cpp  binary_buffer.h  binary_file_stream.cpp  binary_file_stream.h  binary_io.h  clock.h  concepts.h  constants.h  default_binary_io.h  dll_export.h  first_fit.cpp  first_fit.h  intrin.h  logging.cpp  logging.h  macro.h  magic_enum.h  mathematics.h  platform.cpp  platform.h  pool.cpp  pool.h  shared_function.h  spin_mutex.h  stl.h  thread_pool.cpp  thread_pool.h  thread_safety.h
core/stl/: deque.h  filesystem.cpp  filesystem.h  fixed_map.h  format.h  functional.h  hash.cpp  hash.h  hash_fwd.h  iterator.h  list.h  lru_cache.h  map.h  memory.cpp  memory.h  optional.h  priority_queue.h  queue.h  ring_buffer.h  stack.h  string.h  unordered_map.h  variant.h  vector.h  vector_map.h
cuda/: CMakeLists.txt  cuda_bindless_array.cpp  cuda_bindless_array.h  cuda_buffer.cpp  cuda_buffer.h  cuda_callback_context.h  cuda_codegen_ast.cpp  cuda_codegen_ast.h  cuda_command_encoder.cpp  cuda_command_encoder.h  cuda_compiler.cpp  cuda_compiler.h  cuda_device.cpp  cuda_device.h  cuda_error.h  cuda_event.cpp  cuda_event.h  cuda_host_buffer_pool.cpp  cuda_host_buffer_pool.h  cuda_semaphore.cpp  cuda_semaphore.h  cuda_shader.cpp  cuda_shader.h  cuda_shader_metadata.cpp  cuda_shader_metadata.h  cuda_shader_native.cpp  cuda_shader_native.h  cuda_stream.cpp  cuda_stream.h  cuda_swapchain.cpp  cuda_swapchain.h  cuda_texture.cpp  cuda_texture.h  default_binary_io.cpp  default_binary_io.h  resource_tracker.h  string_scratch.cpp  string_scratch.h
cuda/cuda_builtin/: cuda_builtin.h  cuda_builtin_kernels.cu  cuda_builtin_kernels.h  cuda_device_math.h  cuda_device_resource.h  cuda_jit.h
cuda/cuda_builtin_kernels/: cuda_builtin_kernels.cu  cuda_builtin_kernels.h  cuda_context.cpp  cuda_context.cu  cuda_context.h  cuda_util.cpp  cuda_util.h  cutlass_gemm.h  hashgrid.cpp  hashgrid.cu  hashgrid.h  marching.cu  marching.h  reduce.cpp  reduce.cu  reduce.h  runlength_encode.cu  runlength_encode.h  scan.cu  scan.h  sort.cu  sort.h
cuda/cuda_commands/: mad_throughput.cu  matmul.cu
cuda/lcub/: device_merge_sort.cpp  device_partition.cpp  device_radix_sort.cpp  device_reduce.cpp  device_run_length_encode.cpp  device_scan.cpp  device_select.cpp  device_spmv.cpp
cuda/math/: array.h  bounds.h  cuda_math_utils.h  dump.cpp  fabric.h  initializer_array.h  intersect.h  mat.h  quat.h  range.h  spatial.h  vec.h
cuda/math_old/: cuda_math_utils.h  intersect_tri.h  matnn.h  noise.h  rand.h  range.h  solid_angle.h  spatial.h  svd.h  vec.h
cuda/stl/: cuda_context.cu  cuda_util.cpp  cuda_util.h  cutlass_gemm.cu  cutlass_gemm.h  reduce.cu  (+6 more)
dsl/: CMakeLists.txt  arg.h  atomic.h  binding_group.h  builtin.cpp  builtin.h  constant.h  dispatch_indirect.cpp  dispatch_indirect.h  expr.h  expr_traits.h  func.cpp  func.h  local.cpp  local.h  operators.h  polymorphic.cpp  polymorphic.h  printer.cpp  printer.h  ref.h  resource.cpp  resource.h  shared.h  soa.cpp  soa.h  stmt.h  struct.h  sugar.cpp  sugar.h  syntax.h  var.h
metal/: CMakeLists.txt  metal_api.h  metal_bindless_array.cpp  metal_bindless_array.h  metal_buffer.cpp  metal_buffer.h  metal_callback_context.cpp  metal_callback_context.h  metal_codegen_ast.cpp  metal_codegen_ast.h  metal_command_encoder.cpp  metal_command_encoder.h  metal_compiler.cpp  metal_compiler.h  metal_debug_capture.cpp  metal_debug_capture.h  metal_device.cpp  metal_device.h  metal_event.cpp  metal_event.h  metal_shader.cpp  metal_shader.h  metal_shader_metadata.cpp  metal_shader_metadata.h  metal_stage_buffer_pool.cpp  metal_stage_buffer_pool.h  metal_stream.cpp  metal_stream.h  metal_stream_objc.mm  metal_swapchain.cpp  metal_swapchain.h  metal_swapchain.mm  metal_texture.cpp  metal_texture.h
runtime/: CMakeLists.txt  bindless_array.cpp  bindless_array.h  buffer.cpp  buffer.h  buffer_arena.h  byte_buffer.cpp  byte_buffer.h  command_list.cpp  command_list.h  context.cpp  context.h  device.cpp  device.h  dispatch_buffer.cpp  dispatch_buffer.h  event.cpp  event.h  hash_grid.cpp  hash_grid.h  image.cpp  image.h  mipmap.cpp  mipmap.h  shader.h  stream.cpp  stream.h  stream_event.h  swapchain.cpp  swapchain.h  volume.cpp  volume.h
vulkan/: CMakeLists.txt  moltenvk_surface.mm  vulkan_instance.cpp  vulkan_instance.h  vulkan_swapchain.cpp  vulkan_swapchain.h
(+160 files in other folders)
